--- a/public/base.css
+++ b/public/base.css
@@ -8,3 +8,9 @@ html, body, #app {
   width: 100%;
   height: 100%;
 }
+
+#app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
